# devenv

./: .gitignore  .gitmodules  docker-compose.dev.yml
docker/: Dockerfile.go  Dockerfile.rust
docker/database/: init.sql
going/: .gitignore  go.mod
going/project/: go.mod
going/project/guestbook/: PROJECT  go.mod
going/project/guestbook/api/v1/: groupversion_info.go  guestbook_types.go
going/project/guestbook/cmd/: main.go
going/project/guestbook/config/crd/: kustomization.yaml
going/project/guestbook/config/rbac/: guestbook_editor_role.yaml  guestbook_viewer_role.yaml  role.yaml
going/project/guestbook/config/samples/: webapp_v1_guestbook.yaml
going/project/guestbook/internal/controller/: guestbook_controller.go  guestbook_controller_test.go  suite_test.go
going/project/guestbook/test/e2e/: e2e_suite_test.go  e2e_test.go
going/project/k8sClient/: Makefile  go.mod  go.sum
going/project/k8sClient/cmd/: main.go
going/project/k8sClient/pkg/: utils.go
going/project/k8sClient/pkg/namespaces/: namepace.go
going/project/memcached-operator/: .air.toml  Dockerfile  Makefile  PROJECT  go.mod  go.sum
going/project/memcached-operator/api/v1alpha1/: memcached_types.go
going/project/memcached-operator/cmd/: main.go
going/project/memcached-operator/config/manager/: kustomization.yaml
going/project/memcached-operator/config/samples/: cache_v1alpha1_memcached.yaml  (+1 more)
rusting/projects/todolist/backend/: Cargo.toml  Makefile
rusting/projects/todolist/backend/entity/: Cargo.toml
rusting/projects/todolist/backend/entity/src/: lib.rs  todo.rs
(+12 files in other folders)
