[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = "0.7"  # Or the version you're using
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }